--- a/css/styles.css
+++ b/css/styles.css
@@ -192,6 +192,7 @@ Navbar
   display: grid;
   align-items: center;
   transition:  var(--transition);
+  background-color: var(--clr-primary-10);
   
  
 } 
@@ -264,6 +265,16 @@ Navbar
 
   }
 }
+/* navbar fixed */
+.navbar-fixed{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  background-color: var(--clr-white);
+  box-shadow: var(--light-shadow);
+}
  
 
 /*
@@ -272,13 +283,118 @@ Sidebar
 ===============
 */
 
+ .sidebar{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 4;
+  background-color: var(--clr-grey-10);
+  display: grid;
+  place-items:  center;
+  /* to hide the sidebar */
+  transform:  translateX(-100%);
+}
+/* to show the side bar */
+ .show-sidebar{
+  transform: translateX(0);
+ }
+ .close-btn{
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 2.5rem;
+  background-color: transparent;
+  border: transparent;
+  color: #bb2525;
+  cursor: pointer;
+  transition: var(--transition);
+ }
+ .close-btn:hover{
+   color: #b625b5;
+   transform: rotate(90deg);
+ }
+ .sidebar-links{
+   margin-bottom: 1.5rem;
+   /* border: 1px solid blue; */
+   text-align: center;
+ }
+ .sidebar-links a{
+  display: inline-block;
+  margin-bottom: 0.75rem;
+  font-size: 1.8rem;
+  text-transform: capitalize;
+  letter-spacing: var(--spacing);
+  color: var(--clr-grey-5);
+  /* border: 2px solid red; */
+  transition: var(--transition);
+ }
+.sidebar-links a:hover{
+  color: var(--clr-primary-5);
+  transform: scale(1.2);
+}
+.social-icons{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  margin-top: 3rem;
+  width: 20rem;
+  /* border: 1px solid red; */
+
+}
+.social-icons a{
+  font-size: 1.3rem;
+  color: var(--clr-grey-1);
+  transition: var(--transition);
+}
+.social-icons a:hover{
+   color: var(--clr-primary-5);
+}
+
 /*
 =============== 
 Hero
 ===============
 */
 /* underline added to globals */
+  .hero{
+    /* border: 2px solid red; */
+    background-color: var(--clr-primary-10);
+  }
+  .hero-center{
+    /* border: 5px solid blue; */
+    min-height: calc(100vh - 5rem);
+    display: grid;
+    place-items: center;;
+  }
+  .hero-info .underline{
+    margin-left: 0;
+    margin-bottom: 0rem;
+    width: 4rem;
+  }
+  .hero-info h1{
+    font-weight: 700;
+    margin-bottom: 0.5rem;
+  }
+  .hero-info h4{
+    font-size: 0.9rem;
+    color: var(--clr-grey-5);
+  }
+  .hero-btn{
+    margin-top: 1rem;
+    
+  }
+  .hero-icons{
+    justify-items: start;
+    /* border: 1px solid red; */
+    
+    
+  }
 
+
+  .hero-img{
+    display: none;
+  }
 
 /*
 =============== 
